# htmxchat

./: Cargo.toml  README.md  build.rs  flake.nix  main.rs  result  tailwind.config.js
.github/workflows/: build_nix.yml
src/: main.rs
