[package]
name = "htmxchat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["ws", "headers"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
serde_json = "1.0"
fastrand = "2.0"
maud = "0.25"
serde = { version = "1.0.188", features = ["derive"] }
