[package]
name = "htmxchat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["ws", "headers"] }
tokio = { version = "1.0", features = ["full"] }
maud = { version = "0.25", features = ["axum"] }
futures = "0.3"
serde_json = "1.0"
fastrand = "2.0"
arcstr = "1.1.5"
argh = "0.1.12"

[build-dependencies]
ureq = "2.8.0"
